--- a/src/components/OrderPanel/ProductOrderForm/ProductOrderForm.module.css
+++ b/src/components/OrderPanel/ProductOrderForm/ProductOrderForm.module.css
@@ -64,6 +64,9 @@
 .submitButton {
   padding: 0 24px;
   margin-top: 24px;
+  display: flex;
+  gap: 12px;
+  flex-direction: column;
 
   @media (--viewportMedium) {
     padding: 0;
