feat: finalize email template and logic initiate children txs

--- a/src/containers/CheckoutPage/CheckoutPage.module.css
+++ b/src/containers/CheckoutPage/CheckoutPage.module.css
@@ -477,7 +477,7 @@
   border-radius: 2px;
   @media (--viewportLarge) {
     /* Dimensions */
-    width: 70%;
+    width: 519px;
     max-width: 519px;
   }
 }
