--- a/ext/transaction-processes/default-purchase/templates/purchase-order-review-by-provider-wanted/purchase-order-review-by-provider-wanted-html.html
+++ b/ext/transaction-processes/default-purchase/templates/purchase-order-review-by-provider-wanted/purchase-order-review-by-provider-wanted-html.html
@@ -14,7 +14,7 @@
             <tr style="width:100%">
               <td>
                 <h1 style="color:#484848;font-size:26px;line-height:1.3;font-weight:700">{{t "PurchaseOrderReviewByProviderWanted.Title" "Leave a review for {customerDisplayName}"  customerDisplayName=customer.display-name }}</h1>
-                <p style="font-size:16px;line-height:1.4;margin:16px 0;color:#484848">{{t "PurchaseOrderReviewByProviderWanted.Content" "{customerDisplayName} recently purchased {listingTitle} from you. Please write {customerDisplayName} a review to describe your experience."  customerDisplayName=customer.display-name listingTitle=listing.title}}</p>
+                <p style="font-size:16px;line-height:1.4;margin:16px 0;color:#484848">{{t "PurchaseOrderReviewByProviderWanted.Content" "{customerDisplayName} recently purchased from you. Please write {customerDisplayName} a review to describe your experience."  customerDisplayName=customer.display-name }}</p>
                 <table style="padding:16px 0 0" align="center" border="0" cellPadding="0" cellSpacing="0" role="presentation" width="100%">
                   <tbody>
                     <tr>
