--- a/src/containers/CheckoutPage/CheckoutPage.module.css
+++ b/src/containers/CheckoutPage/CheckoutPage.module.css
@@ -83,7 +83,7 @@
 .avatarWrapper {
   /* Position (over the listing image)*/
   margin-left: 24px;
-  margin-top: -31px;
+  margin-top: 10px;
 
   /* Rendering context to the same lavel as listing image */
   position: relative;
@@ -93,6 +93,7 @@
 
   @media (--viewportLarge) {
     margin-left: 0;
+    margin-top: 0px;
   }
   &.noListingImage {
     margin-top: 24px;
@@ -141,7 +142,9 @@
 }
 
 .listingDetailsWrapper {
-  margin: 0 48px;
+  @media (--viewportLarge) {
+    margin: 0 48px;
+  }
 }
 
 .detailsHeadingMobile {
@@ -267,7 +270,7 @@
     flex-shrink: 0;
     display: block;
     /* Dimensions */
-    width: 409px;
+    width: 459px;
     padding-bottom: 36px;
 
     /* Position */
