--- a/src/styles/marketplaceDefaults.css
+++ b/src/styles/marketplaceDefaults.css
@@ -1,5 +1,6 @@
 @import '../assets/sanitize.css';
 @import './customMediaQueries.css';
+@import 'react-phone-number-input/style.css';
 
 /* ================ Custom Properties aka CSS variables ================ */
 
