--- a/src/containers/TransactionPage/TransactionPanel/TransactionPanel.module.css
+++ b/src/containers/TransactionPage/TransactionPanel/TransactionPanel.module.css
@@ -547,3 +547,10 @@
     display: none !important;
   }
 }
+
+.shippingLabelLinkContainer {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  padding-left: 13px;
+}
